--- a/src/app/admin/transaction/dialogs/delete/delete.component.html
+++ b/src/app/admin/transaction/dialogs/delete/delete.component.html
@@ -1,1 +1,12 @@
-<p>delete works!</p>
+<div class="container">
+    <h3 mat-dialog-title>Are you sure you want to delete?</h3>
+    <div mat-dialog-content>
+     
+    </div>
+    <div mat-dialog-actions align="center" class="mb-1 text-center">
+      <button mat-flat-button color="warn" (click)="onNoClick()" tabindex="-1">No</button>
+      <button mat-flat-button color="primary" type="submit"
+        [mat-dialog-close]="1" (click)="onSubmit(data)">Yes</button>
+     
+    </div>
+</div>
