--- a/src/app/admin/transaction/dialogs/addedit/addedit.component.html
+++ b/src/app/admin/transaction/dialogs/addedit/addedit.component.html
@@ -154,6 +154,12 @@
                 [hidden]="dataSource.length==0"> -->
                 <table mat-table [dataSource]="dataSource" class="elevationClass">
                   <!-- <tr  *matHeaderRowDef="displayedColumns; sticky: true"></tr> -->
+                  <ng-container  *ngIf="this.data.tabledatadeatils.dailogPage=='deliveryDailog'"  matColumnDef="checked">
+                    <th mat-header-cell *matHeaderCellDef width="10%"> # </th>
+                    <td mat-cell *matCellDef="let element">
+                      <mat-checkbox [(ngModel)]="element.checked"></mat-checkbox>
+                    </td>
+                  </ng-container>
                   <ng-container matColumnDef="OriginOffice" sticky>
                     <th mat-header-cell *matHeaderCellDef class="pr-0 pl-1ClassHead"> Origin Office </th>
                     <td mat-cell *matCellDef="let element" class="pr-0 pl-1Class HeigClass DgridClS hovertd" (click)="cellClicked(element.awb_number)">
