--- a/src/app/admin/transaction/drspod/drspod.component.html
+++ b/src/app/admin/transaction/drspod/drspod.component.html
@@ -68,6 +68,12 @@
                                     [hidden]="dataSource.length==0"> -->
                                     <table mat-table [dataSource]="dataSource" class="elevationClass">
                                       <!-- <tr  *matHeaderRowDef="displayedColumns; sticky: true"></tr> -->
+                                      <ng-container matColumnDef="checked">
+                                        <th mat-header-cell *matHeaderCellDef width="10%"> # </th>
+                                        <td mat-cell *matCellDef="let element">
+                                          <mat-checkbox [(ngModel)]="element.checked"></mat-checkbox>
+                                        </td>
+                                      </ng-container>
                                       <ng-container matColumnDef="Id" sticky>
                                         <th mat-header-cell *matHeaderCellDef class="pr-0 pl-1ClassHead"> ID</th>
                                         <td mat-cell *matCellDef="let element" class="pr-0 pl-1Class HeigClass DgridClS hovertd" (click)="cellClicked(element.AwbNumber,element.Id,element.InscanId,element.Id)">
