--- a/src/app/admin/transaction/drspod/drspod.component.html
+++ b/src/app/admin/transaction/drspod/drspod.component.html
@@ -74,8 +74,9 @@
                                       <ng-container matColumnDef="checked">
                                         <th mat-header-cell *matHeaderCellDef width="10%"> # </th>
                                         <td mat-cell *matCellDef="let element">
-                                          <mat-checkbox [(ngModel)]="element.checked" (change)="CheckboxChange($event,element.InscanId)"></mat-checkbox>
+                                          <mat-checkbox [(ngModel)]="element.checked" (change)="selectHandler(element.InscanId)"></mat-checkbox>
                                         </td>
+			
                                       </ng-container>
                                       <ng-container matColumnDef="Id" sticky>
                                         <th mat-header-cell *matHeaderCellDef class="pr-0 pl-1ClassHead"> ID</th>
