select box change

--- a/src/app/admin/transaction/drspod/drspod.component.html
+++ b/src/app/admin/transaction/drspod/drspod.component.html
@@ -41,8 +41,8 @@
        
                               </li>
                               <li>
-                                <!-- <img src="{{userImg}}" class="user-img" width="110" alt=""> -->
-                                {{userImg}}
+                                <img src="http://34.123.75.4:8080/api/images/{{userImg}}" class="user-img" width="110" alt="">
+                                <!-- {{userImg}} -->
 
                                 <button [disabled]="uploadDisabled" (click)="onuploadProfileimg(drspoddForm.value)">Upload
                                   <!-- <i class="material-icons">image</i> -->
