--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,8 +54,10 @@
 .pmr-2{ left: 1.25rem !important;}    
 .ng-select.ng-select-single{
   .ng-select-container {
-    height: 33px;
-    min-height: 33px; font-size: 13px;
+    height: 55px;
+    min-height: 50px;
+    font-size: 16px;
+    margin-bottom: 20px;
   }
 }
 
